--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,8 @@ body {
 }
 
 body {
-  font-family: "Roboto", "sans-serif", "serif";
+  font-family: "Roboto", "Arial", "serif";
   color: #ffffff;
-  font-family: Roboto;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.2;
@@ -34,7 +33,11 @@ h2 {
 
 .site-wrapper {
   min-width: 1200px;
-  min-height: 100vh;
+  /*
+  display: flex;
+  flex-wrap: wrap;
+*/
+  flex-basis: 1200;
   background-repeat: no-repeat;
   background-position: top center;
   transition: all 0.5s ease;
@@ -184,7 +187,7 @@ h2 {
 }
 
 .hide-search-form {
-  display: none;
+/*  display: none;*/
 }
 
 .user-block {
@@ -318,18 +321,17 @@ h2 {
   left: calc(50% - 70px);
 }
 
-hit-sales:hover {
+.hit-sales:hover {
   z-index: 100;
 }
 
-hit-sales:hover .hover-block {
+.hit-sales:hover .hover-block {
   display: block;
   z-index: 3;
 }
 
 .about-shop {
   border: 2px dotted black;
-  
   display: flex;
   justify-content: space-around;
   align-items: stretch;
@@ -337,11 +339,13 @@ hit-sales:hover .hover-block {
   margin-top: 40px;
   padding-top: 0;
 }
+
 .about-shop>h2 {
   border: 5px dotted red;
-  width:100%;
+  width: 100%;
   padding: 0 30px;
 }
+
 .about-shop>p {
   border: 2px dotted green;
   width: 40%;
@@ -349,80 +353,185 @@ hit-sales:hover .hover-block {
   margin-left: 40px;
 }
 
-
 .block-news-subscribe {
   border: 2px dotted green;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   margin-top: 40px;
-  }
+}
 
 .news-blog {
   border: 1px dotted red;
   display: block;
   width: 560px;
   min-height: 220px;
-  
 }
 
 .subscribe {
   border: 1px dotted red;
-display: block;
+  display: block;
   width: 560px;
   min-height: 220px;
 }
 
+.map-wrapper {
+  border: 2px dotted red;
+  min-width: 1200px;
+  margin-top: 40px;
+}
 
-
+.map {
+  border: 2px dotted green;
+  background-image: url(../img/map.jpg);
+  background-repeat: no-repeat;
+  min-height: 430px;
+  min-width: 1200px;
+  background-size: cover;
+}
 
 .map-contact {
-  border: 5px dotted green;
-  
+  border: 2px dotted green;
   display: flex;
   flex-direction: column;
   margin-left: auto;
-/*  margin-right: 27px;*/
-/*  align-content:center;*/
-/*  justify-content: center;*/
-/*  align-items:center;*/
   width: 302px;
   height: 305px;
   background-color: #fffefc;
   border-radius: 15px;
   display: none;
-  
 }
-.map-contact>p {
-color: #323232;
-font-size: 14px;
-font-weight: 400;
-line-height: 20px;
-}
-.map-contact>b {
 
-color: #323232;
-font-size: 18px;
-font-weight: 700;
-line-height: 24px;
+.map-contact>p {
+  color: #323232;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.map-contact>b {
+  color: #323232;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
 }
 
 .feedback-form {
   display: none;
 }
 
-.map {
-  border: 5px dotted green;
-  
-  
+.main-footer {
   display: flex;
-  justify-content:center;
-/*  flex-wrap: wrap;*/
-  background-image: url(../img/map.jpg);
+  justify-content: center;
+  align-items: center;
+  border: 5px dotted green;
+  min-height: 103px;
+}
+
+.footer-container {
+  border: 5px dotted red;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis:  1200px;
+}
+
+.footer-social {
+  border: 2px dotted green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 185px;
+}
+
+.social-btn {
+  width: 32px;
+  height: 33px;
+  margin-right: 10px;
+  background-image: url(../img/sprite-social.png);
   background-repeat: no-repeat;
-/*  width: 100%;*/
-  min-height: 430px;
-/*  position: relative;*/
-  margin: auto;
-  margin-top: 40px;
+}
+
+.social-btn-tw {
+  background-position: 0 0;
+}
+
+.social-btn-inst {
+  background-position: -50px 0px;
+}
+
+.social-btn-fb {
+  background-position: -98px 0px;
+}
+
+.social-btn-vk {
+  background-position: -148px 0px;
+}
+
+.footer-info {
+  border: 2px dotted green;
+  display: flex;
+  position: relative;
+/*  margin-left: 212px;*/
+}
+
+.footer-info-column1 {
+  border: 2px dotted red;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-info-column2 {
+  border: 2px dotted black;
+  display: flex;
+  flex-direction: column;
+  margin-left: 32px;
+}
+
+.footer-info-column1::before {
+  content: "❤";
+  width: 15px;
+  height: 13px;
+  /*
+  background-image: url(../img/heart-footer.png);
+  background-repeat: no-repeat;
+*/
+  position: absolute;
+  top: 3px;
+  left: -20px;
+}
+
+.footer-copyright {
+  border: 2px dotted black;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-copyright>a {
+  border: 2px dotted black;
+}
+
+.footer-copyright>p {
+  border: 2px dotted black;
+  margin: 0;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 60px;
+  left: 700px;
+  min-width: 341px;
+  min-height: 84px;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+  border-radius: 4px;
+  background-color: #f8f7f4;
+}
+.search-form input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 311px;
+  min-height: 44px;
 }
