--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,8 @@ h2 {
 }
 
 .site-wrapper {
+  outline: 1px dotted red;
   min-width: 1200px;
-  /*
-  display: flex;
-  flex-wrap: wrap;
-*/
-  flex-basis: 1200;
   background-repeat: no-repeat;
   background-position: top center;
   transition: all 0.5s ease;
@@ -63,14 +59,14 @@ h2 {
 }
 
 .content-wrapper {
-  border: 2px dotted red;
+  outline: 1px dotted red;
   width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
 .main-header {
-  border: 2px dotted black;
+  outline: 1px dotted red;
 }
 
 .slider {
@@ -92,7 +88,7 @@ h2 {
   font-size: 60px;
 }
 
-.slide-btn {
+.red-btn {
   display: inline-block;
   padding: 12px 50px;
   font-weight: 600;
@@ -110,14 +106,14 @@ h2 {
   box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
 }
 
-.slide-btn:hover {
+.red-btn:hover {
   background: -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
   box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
 
-.slide-btn:active {
+.red-btn:active {
   background: -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
@@ -175,11 +171,10 @@ h2 {
 /*слайдер*/
 
 .header-container {
-  border: 2px solid green;
+  outline: 1px dotted red;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  min-width: 960px;
+  min-width: 1200px;
 }
 
 .hide-login-form {
@@ -187,13 +182,17 @@ h2 {
 }
 
 .hide-search-form {
-/*  display: none;*/
+  /*  display: none;*/
 }
 
 .user-block {
-  border: 2px solid red;
+  outline: 1px dotted red;
   display: flex;
+  /*  justify-content: space-between;*/
   margin-left: auto;
+  flex-basis: 265px;
+  min-height: 35px;
+  align-items: center;
 }
 
 .main-navigation {
@@ -201,7 +200,7 @@ h2 {
 }
 
 .navigation {
-  border: 2px solid red;
+  outline: 1px dotted red;
   display: flex;
   align-items: flex-start;
   list-style: none;
@@ -209,6 +208,11 @@ h2 {
   font-size: 16px;
   font-weight: 700;
   line-height: 18px;
+  text-decoration: none;
+}
+
+.navigation a {
+  color: #ffffff;
 }
 
 .navigation li {
@@ -220,21 +224,20 @@ h2 {
 }
 
 .work-time {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   display: flex;
   justify-content: flex-end;
-  /*  margin-left: auto;*/
 }
 
 .content-profitable {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   display: flex;
   justify-content: center;
   margin-top: 41px;
 }
 
 .chocolate-share {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   margin-left: 26px;
   width: 560px;
   height: 229px;
@@ -243,34 +246,35 @@ h2 {
 }
 
 .raspberry-share {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   width: 560px;
   height: 229px;
   background-image: url(../img/bg-raspberry.png);
   background-repeat: no-repeat;
 }
 
-.wrapper-hit-sales {
-  border: 2px dotted black;
+.wrapper-ice-item {
+  outline: 1px dotted red;
   margin-top: 40px;
 }
 
-.col1-hit-sales {
-  border: 2px dotted black;
+.col-ice-item {
+  outline: 1px dotted red;
   display: flex;
   justify-content: center;
 }
 
-.col1-hit-sales section:not(:last-child) {
-  margin-right: 26px;
-}
-
-.hit-sales {
-  border: 5px dotted red;
+.ice-item {
+  outline: 1px dotted red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   position: relative;
-  min-height: 400px;
-  /*  z-index: 100;*/
+  min-height: 405px;
+  min-width: 293px;
+  z-index: 10;
+  margin-bottom: 17px;
 }
 
 .ice-item-price {
@@ -281,9 +285,11 @@ h2 {
 }
 
 .ice-item-name {
-  border: 2px dotted black;
-  display: block;
-  margin-top: 18px;
+  outline: 1px dotted red;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  /*   почему не срабатывает?*/
   width: 256px;
   font-size: 16px;
   text-align: center;
@@ -291,9 +297,10 @@ h2 {
 }
 
 .hover-block {
-  background-color: rgba(57, 58, 59, 0.5);
-  width: 336px;
-  height: 185px;
+  background-color: #f8f7f4;
+  opacity: 0.3;
+  width: 293px;
+  height: 405px;
   position: absolute;
   top: 0;
   left: 0;
@@ -318,20 +325,17 @@ h2 {
   box-shadow: 0 2px 2px rgba(85, 8, 0, .54);
   position: absolute;
   bottom: 10px;
-  left: calc(50% - 70px);
+  left: 30px;
+  z-index: 10;
+  /*  не могу понять почему кнопка наверх не выходит*/
 }
 
-.hit-sales:hover {
-  z-index: 100;
-}
-
-.hit-sales:hover .hover-block {
+.ice-item:hover .hover-block {
   display: block;
-  z-index: 3;
 }
 
 .about-shop {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   display: flex;
   justify-content: space-around;
   align-items: stretch;
@@ -341,20 +345,20 @@ h2 {
 }
 
 .about-shop>h2 {
-  border: 5px dotted red;
+  outline: 1px dotted red;
   width: 100%;
   padding: 0 30px;
 }
 
 .about-shop>p {
-  border: 2px dotted green;
+  outline: 1px dotted red;
   width: 40%;
   padding: auto;
   margin-left: 40px;
 }
 
 .block-news-subscribe {
-  border: 2px dotted green;
+  outline: 1px dotted red;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
@@ -362,27 +366,27 @@ h2 {
 }
 
 .news-blog {
-  border: 1px dotted red;
+  outline: 1px dotted red;
   display: block;
   width: 560px;
   min-height: 220px;
 }
 
 .subscribe {
-  border: 1px dotted red;
+  outline: 1px dotted red;
   display: block;
   width: 560px;
   min-height: 220px;
 }
 
 .map-wrapper {
-  border: 2px dotted red;
+  outline: 1px dotted red;
   min-width: 1200px;
   margin-top: 40px;
 }
 
 .map {
-  border: 2px dotted green;
+  outline: 1px dotted red;
   background-image: url(../img/map.jpg);
   background-repeat: no-repeat;
   min-height: 430px;
@@ -391,7 +395,7 @@ h2 {
 }
 
 .map-contact {
-  border: 2px dotted green;
+  outline: 1px dotted red;
   display: flex;
   flex-direction: column;
   margin-left: auto;
@@ -421,23 +425,23 @@ h2 {
 }
 
 .main-footer {
+  outline: 1px dotted red;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 5px dotted green;
   min-height: 103px;
 }
 
 .footer-container {
-  border: 5px dotted red;
+  outline: 1px dotted red;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-basis:  1200px;
+  flex-basis: 1200px;
 }
 
 .footer-social {
-  border: 2px dotted green;
+  outline: 1px dotted red;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -469,20 +473,20 @@ h2 {
 }
 
 .footer-info {
-  border: 2px dotted green;
+  outline: 1px dotted red;
   display: flex;
   position: relative;
-/*  margin-left: 212px;*/
+  /*  margin-left: 212px;*/
 }
 
 .footer-info-column1 {
-  border: 2px dotted red;
+  outline: 1px dotted red;
   display: flex;
   flex-direction: column;
 }
 
 .footer-info-column2 {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   display: flex;
   flex-direction: column;
   margin-left: 32px;
@@ -502,36 +506,225 @@ h2 {
 }
 
 .footer-copyright {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   display: flex;
   flex-direction: column;
 }
 
 .footer-copyright>a {
-  border: 2px dotted black;
+  outline: 1px dotted red;
 }
 
 .footer-copyright>p {
-  border: 2px dotted black;
+  outline: 1px dotted red;
   margin: 0;
 }
 
+.search {
+  position: relative;
+  margin-right: 10px;
+}
+
 .search-form {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  top: 60px;
-  left: 700px;
-  min-width: 341px;
-  min-height: 84px;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+  display: none;
+  width: 341px;
+  height: 84px;
+  text-align: center;
   border-radius: 4px;
   background-color: #f8f7f4;
+  padding: 10px;
+  box-sizing: border-box;
+  position: absolute;
+  top: 70px;
+  right: 150px;
 }
+
 .search-form input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 311px;
-  min-height: 44px;
+  width: 311px;
+  height: 44px;
+  border-radius: 4px 5px 5px 4px;
+  border: 1px solid #d3d3d2;
+  background-color: #ffffff;
+  color: #999999;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  vertical-align: middle;
+  font-size: 18px;
+  padding: 10px auto;
+  margin-top: 10px;
+  padding-left: 10px;
 }
+
+.search-btn::before {
+  content: "";
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  right: 0px;
+  top: -15px;
+  background-image: url(../img/search-sprite.png);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.search:hover .search-form {
+  display: inline-block;
+}
+
+.search:hover .search-btn::before {}
+
+.login,
+.basket {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 32px;
+  min-width: 92px;
+  margin-left: 7px;
+  line-height: 16px;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, .2);
+}
+
+.basket {
+  min-width: 117px;
+}
+
+.user-block-btn {
+  display: block;
+  margin-top: 0;
+  padding: 8px 8px 8px 45px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+  text-decoration: none;
+}
+.basket:hover{
+  background-color: #f8f7f4;
+}
+.login:hover {
+  background-color: #f8f7f4;
+}
+
+/*
+.login,.basket:hover {
+  background-color: #f8f7f4;
+}
+не могу понять почему запись в таком виде работает не корректно*/
+
+.user-block-btn:hover {
+  color: #323232;
+}
+
+.login>.user-block-btn::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 16px;
+  width: 23px;
+  height: 19px;
+  background-image: url(../img/login-sprite.png);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.login:hover .user-block-btn::before {
+  background-position: 0 -52px;
+}
+
+.basket>.user-block-btn::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 16px;
+  width: 23px;
+  height: 19px;
+  background-image: url(../img/basket-sprite.png);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.basket>.basket-full::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 6px;
+  width: 23px;
+  height: 19px;
+  background-image: url(../img/basket-sprite.png);
+  background-repeat: no-repeat;
+  background-position: 0 -52px;
+}
+
+/*
+.basket:hover .user-block-btn::before {
+  background-position: 0 -52px;
+}
+*/
+
+.line2 {
+  outline: inherit;
+  display: flex;
+  justify-content: space-between;
+}
+
+.breadcrumbs {}
+
+.breadcrumbs-wrapper {
+  display: flex;
+}
+
+.filter-row1 {
+  outline: 1px dotted red;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.main-filter {
+  outline: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.main-filter>h1 {
+  color: #ffffff;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 41px;
+}
+
+.filter-row2 {
+  outline: 1px dotted red;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.paginator{
+  outline: 1px dotted red;
+  
+  display: flex;
+  justify-content: flex-end;
+  min-width: 190px;
+  min-height: 26px;
+}
+}
+
+/*
+.paginator a {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+  color: #ffffff;
+}
+
+.current {
+  background-color: #ffffff;
+  color: #323232;
+  border-radius: 50%;
+}*/
