--- a/css/style.css
+++ b/css/style.css
@@ -140,17 +140,17 @@ h2 {
   cursor: pointer;
 }
 
-#btn-1:checked ~ .slider {
+#btn-1:checked ~ .site-wrapper {
   background-color: #849d8f;
   background-image: url("../img/icecream-1.png");
 }
 
-#btn-2:checked ~ .slider {
+#btn-2:checked ~ .site-wrapper {
   background-color: #8996a6;
   background-image: url("../img/icecream-2.png");
 }
 
-#btn-3:checked ~ .slider {
+#btn-3:checked ~ .site-wrapper {
   background-color: #9d8b84;
   background-image: url("../img/icecream-3.png");
 }
@@ -167,13 +167,21 @@ h2 {
   display: block;
 }
 
+
 /*слайдер*/
 
 .header-container {
-  outline: 1px dotted red;
   display: flex;
-  align-items: center;
-  min-width: 1200px;
+  /*  align-items: center;*/
+  min-width: 100%;
+  position: relative;
+}
+
+.header-container img {
+  outline: 1px dotted red;
+  position: absolute;
+  top: 9px;
+  left: 5px;
 }
 
 .hide-login-form {
@@ -185,7 +193,6 @@ h2 {
 }
 
 .user-block {
-  outline: 1px dotted red;
   display: flex;
   /*  justify-content: space-between;*/
   margin-left: auto;
@@ -196,12 +203,20 @@ h2 {
 
 .main-navigation {
   display: flex;
+  padding: 24px 0 0 168px;
 }
 
-.navigation {
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+}
+
+.main-menu {
   outline: 1px dotted red;
   display: flex;
   align-items: flex-start;
+  margin: 0;
+  padding: 0;
   list-style: none;
   color: #ffffff;
   font-size: 16px;
@@ -210,37 +225,105 @@ h2 {
   text-decoration: none;
 }
 
-.navigation a {
+.main-menu a {
+  display: block;
+  padding: 6px 15px;
   color: #ffffff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 18px;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
-.navigation li {
-  margin-right: 27px;
+.main-menu>li {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+      padding-bottom: 8px;
+  z-index: 1;
 }
 
-.sub-menu {
+.main-menu>li>a:hover {
+  color: #323232;
+  text-decoration: none;
+  border-radius: 15px;
+  background-color: #f7f6f3;
+}
+.main-menu>li>a:active {
+box-shadow: inset 0 2px 1px #696969;
+background-color: #ededed;
+background-color: rgba(248, 247, 244, 0.99);
+}
+
+
+.main-menu .sub-menu {
   display: none;
+  position: absolute;
+  top: 30px;
+  /*  если ставлю больше значение то подменю пропадает без возможности выбора*/
+  width: 143px;
+  margin: 0;
+  margin-left: -8px;
+  padding: 0;
+  list-style: none;
+  border-radius: 4px 5px 5px 4px;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+  background-color: #f8f7f4;
+}
+
+.main-menu .sub-menu a {
+  padding: 8px 5px 8px 22px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #323232;
+}
+.main-menu > li:hover .sub-menu {
+  display: block;
+}
+
+.sub-menu a:hover {
+  background-color: #fbded8;
+}
+
+.sub-menu a:active {
+  background-color: #f6b5a5;
+}
+
+.sub-menu a.active {
+  color: #323232;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  border-bottom: 1px solid rgba(50, 50, 50, 0.2);
 }
 
 .work-time {
   padding: 0;
   margin: 0;
   outline: 1px dotted red;
+/*
   display: flex;
   flex-direction: column;
+*/
   position: absolute;
+  top: 75px;
+  right: 192px;
 }
+
 .work-time p {
   /* Style for "С 10 до 20" */
-font-size: 14px;
-font-weight: 700;
-line-height: 16px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
 }
+
 .work-time p:nth-child(2) {
-/* Style for "8 812 450-" */
-font-size: 22px;
-font-weight: 700;
-line-height: 24px;
+  /* Style for "8 812 450-" */
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 24px;
 }
 
 .content-profitable {
@@ -273,7 +356,6 @@ line-height: 24px;
   display: flex;
   flex-wrap: wrap;
 }
-
 
 .ice-item {
   outline: 1px dotted red;
@@ -438,7 +520,7 @@ line-height: 24px;
 .main-footer {
   outline: 5px dotted red;
   display: flex;
-/*  justify-content: center;*/
+  /*  justify-content: center;*/
   justify-content: space-between;
   align-items: center;
   min-height: 103px;
@@ -608,12 +690,15 @@ line-height: 24px;
   color: #ffffff;
   text-decoration: none;
 }
-.basket:hover{
+
+.basket:hover {
   background-color: #f8f7f4;
 }
+
 .login:hover {
   background-color: #f8f7f4;
 }
+
 
 /*
 .login,.basket:hover {
@@ -665,12 +750,20 @@ line-height: 24px;
   background-position: 0 -52px;
 }
 
-
-
 .breadcrumbs {}
 
 .breadcrumbs-wrapper {
   display: flex;
+}
+
+.breadcrumbs-wrapper li {
+  list-style: none;
+  /* Style for "Главная »" */
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
 }
 
 .filter-row-top {
@@ -699,14 +792,15 @@ line-height: 24px;
   justify-content: flex-start;
 }
 
-.paginator{
+.paginator {
   outline: 1px dotted red;
-  
   display: flex;
   justify-content: flex-end;
   min-width: 190px;
   min-height: 26px;
 }
+
+
 }
 
 /*
@@ -723,3 +817,4 @@ line-height: 24px;
   color: #323232;
   border-radius: 50%;
 }*/
+
